# yolov7

./: README.md  detect.py  pyproject.toml  train.py
models/: experimental.py  yolo.py
scripts/: detect.py  export.py  hubconf.py  test.py  train_aux.py
src/yolo7/: __init__.py  autoanchor.py  general.py  loss.py  plots.py
src/yolo7/models/: experimental.py  yolo.py
yolo7/: datasets.py
yolo7/models/: common.py
yolo7/wandb_logging/: wandb_utils.py
