[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "yolo7"
version = "1.0.0"
dependencies = [
    "torch>=1.7.0,!=1.12.0",
    "torchvision>=0.8.1,!=0.13.0",
    "matplotlib>=3.2.2",
    "onnx",
    "seaborn",
    'pyyaml',
]
maintainers = [
    {name="gabriel-ab"}
]
authors = [
    {name="WongKinYiu"}
]

[tool.setuptools.packages.find]
include = ["yolo7.**"]