[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "yolo7"
version = "1.0.1"
dependencies = [
    "torch>=1.7.0,!=1.12.0",
    "torchvision>=0.8.1,!=0.13.0",
    "matplotlib>=3.2.2",
    "onnx>=1.9.0",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
    "PyYAML>=5.3.1",
    "scipy>=1.4.1"
]
maintainers = [
    {name="gabriel-ab"}
]
authors = [
    {name="WongKinYiu"}
]

[tool.setuptools.packages.find]
include = ["yolo7"]